[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flake8-pyspark-with-column"
version = "0.0.1"
description = "A Flake8 plugin to check for PySpark withColumn usage in loops"
authors = [
    {name = "Sem Sinchenko", email = "ssinchenko@apache.org"},
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Framework :: Flake8",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["flake8", "pyspark", "linter", "quality"]
dependencies = [
    "flake8 >= 3.0.0",
]

[project.urls]
Homepage = "https://github.com/SemyonSinchenko/flake8-pyspark-with-column"
Repository = "https://github.com/SemyonSinchenko/flake8-pyspark-with-column.git"

[project.entry-points."flake8.extension"]
P = "flake8_pyspark_with_column:Plugin"

[tool.hatch.build.targets.wheel]
packages = ["flake8_pyspark_with_column.py"]

[tool.hatch.build.targets.sdist]
include = [
    "flake8_pyspark_with_column.py",
    "README.md",
    "LICENSE",
]
